# Nexus-storage

./: .gitignore  Cargo.toml  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INDEX.md  DEPLOYMENT_READY.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  Dockerfile.backend  FILES_GUIDE.md  FINAL_DEPLOYMENT_STEPS.md  NEW_STRUCTURE.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  PUSH_INSTRUCTIONS.md  PUSH_NOW.md  QUICK_DEPLOY.md  QUICK_PUSH.md  RAILWAY_CACHE_FIX.md  RAILWAY_FIX.md  RAILWAY_FORCE_REDEPLOY.md  RAILWAY_SETUP.md  README.md  README_DEPLOYMENT.md  RUN_THIS.txt  SIMPLE_GUIDE.md  authenticate-and-push.sh  deploy-railway.sh  deploy-vercel.sh  docker-compose.yml  mongodb-express-api-example.js  push-helper.ps1  push-helper.sh  report-automation.js
backend/: .env.example  Dockerfile  ENVIRONMENT_VARIABLES.md  ENV_QUICK_REFERENCE.md  README.md  railway.toml
backend/.railway/: auth-service.json  gateway-service.json  metadata-service.json  storage-node.json  sync-service.json
backend/services/auth-service/: Cargo.toml  README.md
backend/services/auth-service/src/: main.rs
backend/services/auth-service/src/handlers/: mod.rs
backend/services/gateway-service/src/: main.rs
backend/services/metadata-service/src/: handlers.rs  main.rs  models.rs
backend/services/storage-node/src/: main.rs
backend/services/sync-service/src/: main.rs
backend/shared/common-lib/src/: lib.rs
backend/shared/common-lib/src/config/: mod.rs
backend/shared/common-lib/src/crypto/: mod.rs
backend/shared/common-lib/src/errors/: mod.rs
backend/shared/common-lib/src/models/: mod.rs
frontend/: README.md  package-lock.json  package.json  vercel.json
frontend/data/: files.json  nodes.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/api/v1/nodes/: route.ts
frontend/src/app/api/v1/settings/: route.ts
frontend/src/app/api/v1/upload/: route.ts
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/activity/: page.tsx
frontend/src/app/dashboard/analytics/: page.tsx
frontend/src/app/dashboard/api/: page.tsx
frontend/src/app/dashboard/files/: page.tsx
frontend/src/app/dashboard/health/: page.tsx
frontend/src/app/dashboard/nodes/: page.tsx
frontend/src/app/dashboard/profile/: page.tsx
frontend/src/app/dashboard/security/: page.tsx
frontend/src/app/dashboard/settings/: page.tsx
frontend/src/app/dashboard/workspace/: page.tsx
frontend/src/store/: useStore.ts
migrations/: 20240101000000_initial_schema.sql
services/auth-service/: Cargo.toml
services/auth-service/src/handlers/: mod.rs
services/auth-service/src/models/: mod.rs
services/gateway-service/: Cargo.toml
services/gateway-service/src/: main.rs
services/metadata-service/: Cargo.toml
services/metadata-service/src/: handlers.rs  main.rs
services/storage-node/: Cargo.toml
services/storage-node/src/: handlers.rs  main.rs
services/sync-service/: Cargo.toml
services/sync-service/src/: main.rs
shared/common-lib/: Cargo.toml
shared/common-lib/src/auth/: mod.rs
shared/common-lib/src/config/: mod.rs
shared/common-lib/src/db/: mod.rs
shared/common-lib/src/models/: mod.rs
