[workspace]
members = [
    "services/auth-service",
    "services/gateway-service",
    "services/metadata-service",
    "services/storage-node",
    "services/sync-service",
    "shared/common-lib",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }
tokio-stream = "0.1"

# Web framework
axum = { version = "0.7", features = ["multipart", "ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "limit"] }

# gRPC
tonic = { version = "0.11", features = ["tls"] }
prost = "0.12"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Tracing / Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.23"

# Prometheus metrics
prometheus = { version = "0.13", features = ["process"] }
axum-prometheus = "0.6"

# Cryptography
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"
config = "0.14"
dotenvy = "0.15"
validator = { version = "0.18", features = ["derive"] }
once_cell = "1"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }

# Rate limiting
governor = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
