[package]
name = "storage-node"
version = "0.1.0"
edition = "2021"

[dependencies]
common-lib = { path = "../../shared/common-lib" }

tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
